[gd_scene load_steps=2 format=3 uid="uid://dv2syn5qffn84"]

[ext_resource type="Script" uid="uid://bg7s11tjtiwoy" path="res://scripts/damage_zone.gd" id="1_ppofr"]

[node name="damage_zone" type="Area2D"]
script = ExtResource("1_ppofr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
